--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ verify_ssl = true
 
 [packages]
 pymodbus = "*"
+flask = "*"
+prometheus-flask-exporter = "*"
+minimalmodbus = "*"
 
 [requires]
 python_version = "3.7"
